--- a/src/index.css
+++ b/src/index.css
@@ -28,12 +28,12 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-background: 221, 40%, 11%;
+    --sidebar-foreground: 0, 0%, 100%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-accent: 221, 83%, 53%;
+    --sidebar-accent-foreground: 0, 0%, 100%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
@@ -62,18 +62,18 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --sidebar-background: 240 5.9% 10%;
+    --sidebar-background: #111827;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-accent: #111827;
+    --sidebar-accent-foreground: #111827;
+    --sidebar-border: #374151;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 body::-webkit-scrollbar,
-.mf::-webkit-scrollbar{
+.mf::-webkit-scrollbar {
   display: none;
 }
 @layer base {
@@ -84,7 +84,7 @@ body::-webkit-scrollbar,
     @apply bg-background text-foreground;
   }
 }
-input[ype="date"]{
+input[ype="date"] {
   display: none;
   -webkit-appearance: none;
 }
@@ -108,10 +108,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .btn-primary {
   @apply text-white px-6 py-3 rounded-md transition;
 }
-.guy{
+.guy {
   background: #3cff9a5f;
 }
-.guy-bg{
+.guy-bg {
   background: #0204497a;
 }
 /* Hide the calendar icon in Firefox */
@@ -138,7 +138,7 @@ input[type="date"] {
   margin-top: -5px;
 }
 
-.lm::-webkit-scrollbar{
+.lm::-webkit-scrollbar {
   display: none;
 }
 
